Added feed settings

--- a/hexo/blog/_config.yml
+++ b/hexo/blog/_config.yml
@@ -34,7 +34,7 @@ titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -69,3 +69,10 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+
+# Feed
+## Refers: https://github.com/LouisBarranqueiro/hexo-theme-tranquilpeak/blob/master/docs/user.md#enable-rss-feed
+feed:
+  type: atom
+  path: atom.xml
+  limit: 10
