--- a/hexo/blog/package.json
+++ b/hexo/blog/package.json
@@ -9,11 +9,12 @@
     "hexo": "^3.1.1",
     "hexo-generator-archive": "^0.1.3",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.0.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.1.2",
     "hexo-renderer-ejs": "^0.1.0",
-    "hexo-renderer-stylus": "^0.3.0",
     "hexo-renderer-marked": "^0.2.6",
+    "hexo-renderer-stylus": "^0.3.0",
     "hexo-server": "^0.1.2"
   }
 }
