--- a/react_tutorial/package.json
+++ b/react_tutorial/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "$(npm bin)/watchify -t [ babelify --presets [ react ] ] main.js -o bundle.js -v"
+    "start": "node server.js",
+    "watch": "$(npm bin)/watchify -t [ babelify --presets [ react ] ] public/javascripts/tutorial.js -o public/bundle.js -v"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,9 @@
     "browserify": "^13.0.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "body-parser": "^1.4.3",
+    "express": "^4.4.5"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0"
