--- a/pupeteer/package.json
+++ b/pupeteer/package.json
@@ -10,6 +10,7 @@
   "author": "bobStrange <bob.is.strange.1983@gmail.com> (https://github.com/bob1983)",
   "license": "MIT",
   "dependencies": {
+    "dayjs": "^1.8.19",
     "puppeteer": "^2.0.0"
   }
 }
