--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -2,7 +2,8 @@ FROM node:current-alpine
 
 WORKDIR /usr/app
 
-COPY ./ ./
+COPY ./package*.json ./
 RUN npm install
+COPY ./ ./
 
 CMD ["npm", "start"]
