Added docker compose

--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:current-alpine
 
-WORKDIR /usr/app
+WORKDIR '/app'
 
 COPY ./package*.json ./
 RUN npm install
-COPY ./ ./
+COPY . .
 
 CMD ["npm", "start"]
