--- a/docker/server/docker-compose.yml
+++ b/docker/server/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   redis-server:
     image: 'redis'
   node-app:
+    restart: 'on-failure'
     build: .
     ports:
       - "8080:8080"
