--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t bobstrange/sandbox -f docker/frontend/Dockerfile.dev .
+  - docker build -t bobstrange/sandbox -f docker/frontend/Dockerfile.dev ./docker/frontend
 script:
   - docker run -e CI=true bobstrange/sandbox npm run test
 
