Change folder structure

--- a/serverless/auction/serverless.yml
+++ b/serverless/auction/serverless.yml
@@ -20,7 +20,7 @@ provider:
 
 functions:
   hello:
-    handler: handler.hello
+    handler: src/handlers/hello.handler
     events:
       - http:
           method:
