--- a/serverless/auction/package.json
+++ b/serverless/auction/package.json
@@ -7,11 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "source-map-support": "^0.5.10"
+    "aws-sdk": "^2.679.0",
+    "source-map-support": "^0.5.10",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^10.12.18",
+    "@types/uuid": "^7.0.3",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-pseudo-parameters": "^2.5.0",
     "serverless-webpack": "^5.2.0",
