--- a/serverless/auction/serverless.yml
+++ b/serverless/auction/serverless.yml
@@ -15,11 +15,7 @@ provider:
   stage: ${opt:stage, 'dev'}
   region: ap-northeast-1
   iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:*PutItem
-      Resource:
-        - arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/AuctionsTable
+    - ${file(iam/AuctionsTableIAM.yml):AuctionsTableIAM}
   apiGateway:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
   environment:
@@ -27,17 +23,7 @@ provider:
 
 resources:
   Resources:
-    AuctionsTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: AuctionsTable
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
+    AuctionsTable: ${file(resources/AuctionsTable.yml):AuctionsTable}
 functions:
   createAuction:
     handler: src/handlers/createAuction.handler
