--- a/serverless/auction/package.json
+++ b/serverless/auction/package.json
@@ -7,8 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@middy/core": "^1.0.0",
+    "@middy/http-error-handler": "^1.0.0",
+    "@middy/http-event-normalizer": "^1.0.0",
+    "@middy/http-json-body-parser": "^1.0.0",
     "aws-sdk": "^2.679.0",
     "source-map-support": "^0.5.10",
+    "utility-types": "^3.10.0",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
