--- a/serverless/auction/iam/AuctionsTableIAM.yml
+++ b/serverless/auction/iam/AuctionsTableIAM.yml
@@ -1,6 +1,7 @@
 AuctionsTableIAM:
   Effect: Allow
   Action:
-    - dynamodb:*PutItem
+    - dynamodb:PutItem
+    - dynamodb:Scan
   Resource:
     - ${self:custom.AuctionsTable.arn}
