--- a/serverless/auction/serverless.yml
+++ b/serverless/auction/serverless.yml
@@ -50,3 +50,9 @@ functions:
       - http:
           method: GET
           path: /auctions/{id}
+  placeBid:
+    handler: src/handlers/placeBid.handler
+    events:
+      - http:
+          method: PATCH
+          path: auction/{id}/bid
