--- a/serverless/auction/serverless.yml
+++ b/serverless/auction/serverless.yml
@@ -38,21 +38,28 @@ functions:
       - http:
           method: POST
           path: /auction
+
   getAuctions:
     handler: src/handlers/getAuctions.handler
     events:
       - http:
           method: GET
           path: /auctions
+
   getAuction:
     handler: src/handlers/getAuction.handler
     events:
       - http:
           method: GET
           path: /auctions/{id}
+
   placeBid:
     handler: src/handlers/placeBid.handler
     events:
       - http:
           method: PATCH
           path: auction/{id}/bid
+  processAuctions:
+    handler: src/handlers/processAuctions.handler
+    # events:
+    #   - schedule: rate(1 minute)
