--- a/serverless/auction/package.json
+++ b/serverless/auction/package.json
@@ -11,6 +11,7 @@
     "@middy/http-error-handler": "^1.0.0",
     "@middy/http-event-normalizer": "^1.0.0",
     "@middy/http-json-body-parser": "^1.0.0",
+    "@middy/validator": "^1.0.0",
     "aws-sdk": "^2.679.0",
     "source-map-support": "^0.5.10",
     "utility-types": "^3.10.0",
