--- a/serverless/auth-service/serverless.yml
+++ b/serverless/auth-service/serverless.yml
@@ -35,7 +35,7 @@ functions:
 
 resources:
   Resources:
-    # This response is needed for custom authorizer failures cors support ¯\_(ツ)_/¯
+    # This response is needed for custom authorizer failures cors support
     GatewayResponse:
       Type: 'AWS::ApiGateway::GatewayResponse'
       Properties:
