--- a/microservice/posts-and-comments/query/package.json
+++ b/microservice/posts-and-comments/query/package.json
@@ -10,6 +10,7 @@
   "author": "bobstrange <bob.1983.g@gmail.com> (https://github.com/bobstrange)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
