--- a/microservice/posts-and-comments/infra/k8s/posts-depl.yaml
+++ b/microservice/posts-and-comments/infra/k8s/posts-depl.yaml
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
         - name: posts
-          image: bobstrange/posts:0.0.2
+          image: bobstrange/posts:latest
