--- a/microservice/posts-and-comments/infra/k8s/posts-depl.yaml
+++ b/microservice/posts-and-comments/infra/k8s/posts-depl.yaml
@@ -15,3 +15,16 @@ spec:
       containers:
         - name: posts
           image: bobstrange/posts:latest
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: posts-cluster-ip-srv
+spec:
+  selector:
+    app: posts
+  ports:
+    - name: posts
+      protocol: TCP
+      port: 8080
+      targetPort: 8080
