--- a/microservice/posts-and-comments/infra/k8s/ingress-srv.yaml
+++ b/microservice/posts-and-comments/infra/k8s/ingress-srv.yaml
@@ -4,12 +4,27 @@ metadata:
   name: ingress-srv
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
     - host: posts.com
       http:
         paths:
-          - path: /posts
+          - path: /posts/create
             backend:
               serviceName: posts-cluster-ip-srv
               servicePort: 8080
+          - path: /posts
+            backend:
+              serviceName: query-cluster-ip-srv
+              servicePort: 8082
+          - path: /posts/?(.*)/comments
+            backend:
+              serviceName: comments-cluster-ip-srv
+              servicePort: 8081
+          - path: /?(.*)
+            backend:
+              serviceName: client-cluster-ip-srv
+              servicePort: 3000
+
+
