--- a/microservice/booker/auth/package.json
+++ b/microservice/booker/auth/package.json
@@ -18,5 +18,8 @@
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.5"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.7.24"
   }
 }
