--- a/microservice/booker/auth/package.json
+++ b/microservice/booker/auth/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.6",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.5.0",
@@ -20,6 +21,7 @@
     "typescript": "^3.9.5"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.40",
     "@types/mongoose": "^5.7.24"
   }
 }
