--- a/microservice/booker/auth/package.json
+++ b/microservice/booker/auth/package.json
@@ -10,18 +10,20 @@
   "author": "bobstrange <bob.1983.g@gmail.com> (https://github.com/bobstrange)",
   "license": "MIT",
   "dependencies": {
+    "@types/cookie-session": "^2.0.39",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.5"
   },
   "devDependencies": {
-    "@types/cookie-session": "^2.0.40",
     "@types/mongoose": "^5.7.24"
   }
 }
