--- a/microservice/booker/auth/package.json
+++ b/microservice/booker/auth/package.json
@@ -13,6 +13,7 @@
     "@types/cookie-session": "^2.0.39",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.7.24",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -24,6 +25,11 @@
     "typescript": "^3.9.5"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.7.24"
+    "@types/jest": "^26.0.0",
+    "@types/supertest": "^2.0.9",
+    "jest": "^26.0.1",
+    "mongodb-memory-server": "^6.6.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.0"
   }
 }
