--- a/microservice/booker/infra/k8s/ingress-srv.yaml
+++ b/microservice/booker/infra/k8s/ingress-srv.yaml
@@ -14,4 +14,8 @@ spec:
             backend:
               serviceName: auth-srv
               servicePort: 8080
+          - path: /?(.*)
+            backend:
+              serviceName: client-srv
+              servicePort: 3000
 
