--- a/microservice/booker/client/package.json
+++ b/microservice/booker/client/package.json
@@ -10,6 +10,7 @@
   "author": "bobstrange <bob.1983.g@gmail.com> (https://github.com/bobstrange)",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
