--- a/microservice/booker/common/package.json
+++ b/microservice/booker/common/package.json
@@ -16,6 +16,20 @@
   "license": "MIT",
   "devDependencies": {
     "del-cli": "^3.0.1",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.5"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
+  "dependencies": {
+    "@types/cookie-session": "^2.0.41",
+    "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
