--- a/microservice/booker/auth/package.json
+++ b/microservice/booker/auth/package.json
@@ -18,6 +18,7 @@
   "author": "bobstrange <bob.1983.g@gmail.com> (https://github.com/bobstrange)",
   "license": "MIT",
   "dependencies": {
+    "@bsbooker/common": "0.0.3",
     "@types/cookie-session": "^2.0.39",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
@@ -39,5 +40,9 @@
     "mongodb-memory-server": "^6.6.1",
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.0"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
