--- a/.github/workflows/issue-greeter.yml
+++ b/.github/workflows/issue-greeter.yml
@@ -10,9 +10,8 @@ jobs:
         env:
           REPO: ${{ github.event.repository.name }}
           OWNER: ${{ github.event.repository.owner.login }}
-          ISSUE_NUMBER: ${ github.event.issue.number }
+          ISSUE_NUMBER: ${{ github.event.issue.number }}
         run: |
           curl -s -X POST https://api.github.com/repos/$OWNER/$REPO/issues/$ISSUE_NUMBER/comments \
             -d '{"body":"Hello ${{ github.event.issue.user.login }}, thanks for your issue!"}'
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-
