--- a/sam-go/template.yaml
+++ b/sam-go/template.yaml
@@ -2,7 +2,7 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: >
   sam-go
-  
+
   Sample SAM Template for sam-go
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
@@ -27,6 +27,22 @@ Resources:
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables:
           PARAM1: VALUE
+  GreetFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: greet/
+      Handler: greet
+      Runtime: go1.x
+      Tracing: Active
+      Events:
+        CatchAll:
+          Type: Api
+          Properties:
+            Path: /greet
+            Method: GET
+      Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
+        Variables:
+          PARAM1: VALUE
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
@@ -41,3 +57,13 @@ Outputs:
   HelloWorldFunctionIamRole:
     Description: "Implicit IAM Role created for Hello World function"
     Value: !GetAtt HelloWorldFunctionRole.Arn
+  GreetAPI:
+    Description: "API Gateway endpoint URL for Greet API"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/greet/"
+  GreetFunction:
+    Description: "Greet Function ARN"
+    Value: !GetAtt GreetFunction.Arn
+  GreetFunctionIamRole:
+    Description: "Implicit IAM Role created for Greet function"
+    Value: !GetAtt GreetFunctionRole.Arn
+
