--- a/go/unit-testing/Makefile
+++ b/go/unit-testing/Makefile
@@ -1,4 +1,13 @@
-.PHONY: build
+.PHONY: test
 
-build:
-	sam build
+test:
+	go test -v ./math
+
+test-coverage:
+	go test -coverprofile=coverage.out ./math
+
+show-coverage:
+	go tool cover -html=coverage.out
+
+benchmark:
+	go test -bench=. ./math
