--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -6,3 +6,10 @@ git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
 # gem "rails"
 gem "pry"
+gem "octokit", "~> 4.0"
+gem "dotenv"
+
+group :development do
+  gem "solargraph"
+  gem "rufo"
+end
