chore: include "all.h" into main to suppress errors

--- a/c++/intro/Makefile
+++ b/c++/intro/Makefile
@@ -1,7 +1,7 @@
 gcc_options = -std=c++17 -Wall --pedantic-error
 
 a.out: main.cpp all.h all.h.gch
-	g++ $(gcc_options) -include all.h $< -o $@
+	g++ $(gcc_options) $< -o $@
 
 all.h.gch: all.h
 	g++ $(gcc_options) -x c++-header $< -o $@
