--- a/ruby/rubocop/Gemfile
+++ b/ruby/rubocop/Gemfile
@@ -5,6 +5,7 @@ source "https://rubygems.org"
 gem "parser"
 
 group :development do
+  gem "solargraph"
   gem "rubocop", require: false
   gem "pry"
   gem "pry-byebug"
