chore: add rubocop-extension-generator

--- a/ruby/rubocop/Gemfile
+++ b/ruby/rubocop/Gemfile
@@ -8,6 +8,7 @@ group :development do
   gem "solargraph"
   gem "yard"
   gem "rubocop", require: false
+  gem 'rubocop-extension-generator', require: false
   gem "pry"
   gem "pry-byebug"
   gem "rspec"
