--- a/obsidian/vault-for-plugin/.obsidian/plugins/obsidian-sample-plugin/package.json
+++ b/obsidian/vault-for-plugin/.obsidian/plugins/obsidian-sample-plugin/package.json
@@ -17,7 +17,9 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"eslint-config-prettier": "^8.8.0",
 		"obsidian": "latest",
+		"prettier": "^2.8.8",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	}
