chore: add react

--- a/obsidian/vault-for-plugin/.obsidian/plugins/obsidian-sample-plugin/.eslintrc.json
+++ b/obsidian/vault-for-plugin/.obsidian/plugins/obsidian-sample-plugin/.eslintrc.json
@@ -2,11 +2,12 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "env": { "node": true },
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "react", "react-hooks", "jsx-a11y", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended"
   ],
   "parserOptions": {
     "sourceType": "module"
